--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,4 +74,21 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-background-color: #09dbf7;
+
+  /** primary **/
+ --ion-color-primary: #085a9e;
+ --ion-color-primary-rgb: 8,90,158;
+ --ion-color-primary-contrast: #ffffff;
+ --ion-color-primary-contrast-rgb: 255,255,255;
+ --ion-color-primary-shade: #074f8b;
+ --ion-color-primary-tint: #216ba8;
+ /** secondary **/
+ --ion-color-secondary: #f4a942;
+ --ion-color-secondary-rgb: 244,169,66;
+ --ion-color-secondary-contrast: #000000;
+ --ion-color-secondary-contrast-rgb: 0,0,0;
+ --ion-color-secondary-shade: #d7953a;
+ --ion-color-secondary-tint: #f5b255;
 }
