--- a/src/app/uv-index/uv-index.page.html
+++ b/src/app/uv-index/uv-index.page.html
@@ -1,9 +1,8 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>
-      Tab Three
-    </ion-title>
-  </ion-toolbar>
+  <ion-toolbar color="primary"> <ion-title>UV Index</ion-title> </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content text-center padding>
+  <kws-uv-index class="primary-value" [uvIndex]="uvIndex?.value"></kws-uv-index>
+  <div class="description">{{ advice[(uvIndex?.riskLevel)] }}</div>
+</ion-content>
