--- a/src/app/forecast/forecast.page.html
+++ b/src/app/forecast/forecast.page.html
@@ -1,10 +1,16 @@
 
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>
-      Tab Two
-    </ion-title>
-  </ion-toolbar>
+  <ion-toolbar color="primary"> <ion-title> Forecast </ion-title> </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content padding>
+  <ion-list>
+    <ion-item *ngFor="let f of forecast">
+      <kws-daily-forecast
+        scale="F"
+        [forecasts]="f"
+        [iconPaths]="iconMap"
+      ></kws-daily-forecast>
+    </ion-item>
+  </ion-list>
+</ion-content>
