--- a/src/app/current-weather/current-weather.page.html
+++ b/src/app/current-weather/current-weather.page.html
@@ -8,7 +8,7 @@
 
 <ion-content padding text-center>
   <div class="information">
-    <div class="city">Madison, WI</div>
+    <div class="city">{{currentWeather.locationName}}</div>
     <kws-temperature
       class="primary-value"
       scale="F"
