--- a/src/app/uv-index/uv-index.page.html
+++ b/src/app/uv-index/uv-index.page.html
@@ -1,5 +1,11 @@
 <ion-header>
-  <ion-toolbar color="primary"> <ion-title>UV Index</ion-title> </ion-toolbar>
+  <ion-toolbar color="primary"> <ion-title>UV Index</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button (click)="openUserPreferences()">
+        <ion-icon slot="icon-only" name="settings"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content text-center padding>
