--- a/src/app/forecast/forecast.page.html
+++ b/src/app/forecast/forecast.page.html
@@ -1,6 +1,12 @@
 
 <ion-header>
-  <ion-toolbar color="primary"> <ion-title> Forecast </ion-title> </ion-toolbar>
+  <ion-toolbar color="primary"> <ion-title> Forecast </ion-title>
+      <ion-buttons slot="primary">
+          <ion-button (click)="openUserPreferences()">
+              <ion-icon slot="icon-only" name="settings"></ion-icon>
+          </ion-button>
+      </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
