--- a/src/app/current-weather/current-weather.page.html
+++ b/src/app/current-weather/current-weather.page.html
@@ -12,6 +12,7 @@
 </ion-header>
 
 <ion-content padding text-center>
+  <div *ngIf="!network.onLine">Warning: network is offline, data may be stale</div>
   <div class="information">
     <div class="city">{{cityName}}</div>
     <kws-temperature
