--- a/src/app/forecast/forecast.page.html
+++ b/src/app/forecast/forecast.page.html
@@ -10,6 +10,7 @@
 </ion-header>
 
 <ion-content padding>
+    <div *ngIf="!network.onLine">Warning: network is offline, data may be stale</div>
   <ion-list>
     <ion-item *ngFor="let f of forecast">
       <kws-daily-forecast
